Adicionando a nova pasta

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 package-lock.json
 
+# Caso você renomeie seu diretório /site, altere também nas linhas abaixo:
 site/node_modules
 site/package-lock.json
 
